# erpnext_cbk_exchange_rate

./: .gitignore  MANIFEST.in  Readme.md  pyproject.toml
cbk_exchange_rate/: hooks.py
cbk_exchange_rate/cbk_exchange_rate/: fetch.py  logger.py  tasks.py
cbk_exchange_rate/cbk_exchange_rate/doctype/cbk_exchange_rate_settings/: __init__.py
